2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct Status’ with ‘struct link’ + ‘struct u_state’.

	* rcs.c (struct u_state): New.
	(struct Status): Delete.
	(statelst): Change type to ‘struct link’.
	(nextstate): Delete var.
	(getstates): Take ‘struct link **’; use ‘extend’.
	(main): Update call to ‘getstates’; update
	‘statelst’ access to walk ‘struct link’ list.

2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct Datepairs’ with ‘struct link’ + ‘struct daterange’.

	* rlog.c (struct daterange): New.
	(struct Datepairs): Delete.
	(datelist, duelst): Change type to ‘struct link *’.
	(recentdate): Take ‘struct daterange *’.
	(extdate): Update to walk ‘struct link’ list.
	(PUSH): Move prior to ‘getdatepair’; nfc.
	(getdatepair): Use ‘struct daterange’ object; use ‘PUSH’.
	(main): Update to walk ‘struct link’ list; also, discard
	incomplete ‘duelst’ entry, substituting it with a new object.

2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Incorporate ‘xpandstring’ into unique caller.

	* rcsgen.c: #include "b-kwxout.h".
	(scandeltatext): Incorporate ‘xpandstring’.
	* rcsedit.c (xpandstring): Delete func.
	* base.h (xpandstring): Delete func decl.

2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Free edit state when done.

	* rcsedit.c (unmake_editstuff): New func.
	* base.h (unmake_editstuff): New func decl.
	* rcs.c (main): Use ‘unmake_editstuff’.
	* rcsgen.c (buildrevision): Likewise.

2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘Iptr_type’ with ‘char *’.

	* b-fro.h (Iptr_type): Delete typedef.
	(struct fro): Change type to ‘char *’ for members ‘ptr’, ‘lim’, ‘base’.
	* b-fro.c (fro_open): Use ‘char *’ directly.
	* rcsedit.c (struct editstuff): Likewise.
	(movelines, insertline, snapshotline, snapshotedit_fast)
	(finisheditline, finishedit_fast, enterstring): Likewise.

2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct Message’ with ‘struct link’ + ‘struct u_log’.
